--- a/latte-core/build.gradle
+++ b/latte-core/build.gradle
@@ -31,5 +31,13 @@ dependencies {
     implementation 'com.android.support.constraint:constraint-layout:1.1.0'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
-    implementation project(':latte-annotations')
+    compile project(':latte-annotations')
+    //字体图标依赖
+    compile 'com.joanzapata.iconify:android-iconify-fontawesome:2.2.2'
+    compile 'com.joanzapata.iconify:android-iconify-ionicons:2.2.2'
+    //Fragment依赖
+    // 如果想使用SwipeBack 滑动边缘退出Fragment/Activity功能，完整的添加规则如下：
+    compile 'me.yokeyword:fragmentation:1.3.3'
+    // swipeback基于fragmentation, 如果是自定制SupportActivity/Fragment，则参照SwipeBackActivity/Fragment实现即可
+    compile 'me.yokeyword:fragmentation-swipeback:1.3.3'
 }
