--- a/latte-core/build.gradle
+++ b/latte-core/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.library'
+apply plugin: 'com.jakewharton.butterknife'
 
 android {
     compileSdkVersion 26
@@ -22,6 +23,7 @@ android {
         }
     }
 
+
 }
 
 dependencies {
@@ -40,4 +42,11 @@ dependencies {
     compile 'me.yokeyword:fragmentation:1.3.3'
     // swipeback基于fragmentation, 如果是自定制SupportActivity/Fragment，则参照SwipeBackActivity/Fragment实现即可
     compile 'me.yokeyword:fragmentation-swipeback:1.3.3'
+    //ButterKnife
+    compile 'com.jakewharton:butterknife:8.4.0'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.4.0'
+
+
+
+
 }
