--- a/latte-core/build.gradle
+++ b/latte-core/build.gradle
@@ -3,9 +3,6 @@ apply plugin: 'com.jakewharton.butterknife'
 
 android {
     compileSdkVersion 26
-
-
-
     defaultConfig {
         minSdkVersion 21
         targetSdkVersion 26
@@ -15,15 +12,13 @@ android {
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
     }
-
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-
-
+    buildToolsVersion '27.0.3'
 }
 
 dependencies {
@@ -50,7 +45,4 @@ dependencies {
     compile 'com.squareup.okhttp3:okhttp:3.8.1'
     compile 'com.squareup.retrofit2:retrofit:2.3.0'
     compile 'com.squareup.retrofit2:converter-scalars:2.3.0'
-
-
-
 }
