--- a/latte-core/src/main/AndroidManifest.xml
+++ b/latte-core/src/main/AndroidManifest.xml
@@ -1,2 +1,6 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.example.yb.latte_core"/>
+<manifest
+    xmlns:android="http://schemas.android.com/apk/res/android"
+          package="com.example.yb.latte_core">
+    <uses-permission android:name="android.permission.INTERNET"/>
+
+</manifest>
