--- a/latte-core/build.gradle
+++ b/latte-core/build.gradle
@@ -51,6 +51,9 @@ implementation fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.squareup.retrofit2:retrofit:2.3.0'
     compile 'com.squareup.retrofit2:converter-scalars:2.3.0'
 
+    //这是一个加载网络时候
+    compile 'com.wang.avi:library:2.1.3'
+
 
 
 }
