--- a/latte-core/build.gradle
+++ b/latte-core/build.gradle
@@ -27,7 +27,7 @@ android {
 }
 
 dependencies {
-implementation fileTree(include: ['*.jar'], dir: 'libs')
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:26.1.0'
     testImplementation 'junit:junit:4.12'
     implementation 'com.android.support.constraint:constraint-layout:1.1.0'
@@ -50,10 +50,10 @@ implementation fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.squareup.okhttp3:okhttp:3.10.0'
     compile 'com.squareup.retrofit2:retrofit:2.3.0'
     compile 'com.squareup.retrofit2:converter-scalars:2.3.0'
-
     //这是一个加载网络时候
     compile 'com.wang.avi:library:2.1.3'
-
-
-
+    //Banner 依赖
+    compile 'com.bigkoo:ConvenientBanner:2.1.2'
+    //alibaba  fastjson
+    implementation 'com.alibaba:fastjson:1.2.47'
 }
